--- a/public/header.css
+++ b/public/header.css
@@ -1,7 +1,3 @@
-:root {
-    --gs: .8rem;
-}
-
 .header {
     background-color: rgb(56, 57, 66);
     display: flex;
@@ -32,7 +28,7 @@
 
 .logo {
     display: flex;
-    gap: var(--gs);
+    gap: .8rem;
     align-items: center;
     color: white;
     font-size: 2rem;
