--- a/src/styles/model.css
+++ b/src/styles/model.css
@@ -1,8 +1,28 @@
-.wrapper {
+.model-wrapper {
     width: 100%;
     height: 50vh;
 }
 
-/* canvas {
-    background-color: rgb(206, 247, 253);
-} */
+.model-wrapper>* {
+    box-shadow: 0 0 .4rem rgb(0, 0, 0, 0.1);
+}
+
+canvas {
+    background-color: rgb(220, 251, 255);
+}
+
+p.start {
+    align-self: flex-start;
+}
+
+.buttons {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: .5rem;
+}
+
+.buttons>button {
+    padding: .4rem .6rem;
+    cursor: pointer;
+}
