--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,9 +7,13 @@
     padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+html,
 body {
     overflow-x: hidden;
-    scroll-behavior: smooth;
 }
 
 div#root {
